# stmesh

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  Dockerfile  Dockerfile.alpine  ProjectOptions.cmake  README.md  compile_commands.json
.devcontainer/: Dockerfile  devcontainer.json  itk.patch  requirements.txt
.github/: constants.env
ci/: run_build.sh  run_docker_build.sh
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  ignorelist.txt
configured_files/: config.hpp.in
docs/: data_visualizer.md  mesh_analyzer.md  py4dproject.md  stmesher.md
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/stmesh/: bitset.hpp  boundary_region_manager.hpp  edt.hpp  geometric_simplex.hpp  geometry_helpers.hpp  lfs_schemes.hpp  marching_hypercubes.hpp  mesh_project.hpp  meshing_algorithm.hpp  meshing_cell.hpp  mixd.hpp  mixd_writer.hpp  problem_types.hpp  radius_schemes.hpp  rle_bitset.hpp  sample_library.hpp  sdf.hpp  sdf_mixins.hpp  statistics_collector.hpp  stmesh.hpp  surface_adapters.hpp  table.hpp  triangulation.hpp  utility.hpp  voxel_complex.hpp  vtk_writer.hpp  writable_triangulation.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  data_visualizer.cpp  mesh_analyzer.cpp  stmesher.cpp  transform_subcommand.hpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/generator/: CMakeLists.txt  marching_hypercubes_table.py
src/py4dproject/: CMakeLists.txt  py4dproject.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
src/stmesh/: CMakeLists.txt  bitset.cpp  boundary_region_manager.cpp  edt.cpp  geometric_simplex.cpp  geometry_helpers.cpp  lfs_schemes.cpp  marching_hypercubes.cpp  mesh_project.cpp  mixd.cpp  mixd_writer.cpp  radius_schemes.cpp  rle_bitset.cpp  sdf.cpp  stmesh.cpp  triangulation.cpp  utility.cpp  voxel_complex.cpp  vtk_writer.cpp
src/stmesher/: CMakeLists.txt  main.cpp
test/: .clang-tidy  CMakeLists.txt  bitset_tests.cpp  constexpr_tests.cpp  edt_tests.cpp  geometric_simplex_tests.cpp  lfs_schemes_tests.cpp  marching_hypercubes_tests.cpp  mesh_projector_tests.cpp  meshing_algorithm_tests.cpp  mixd_test.cpp  mixd_tests.cpp  radius_schemes_tests.cpp  rle_bitset_tests.cpp  sdf_tests.cpp  surface_adapter_tests.cpp  tests.cpp  triangulation_tests.cpp  utility_tests.cpp  voxel_complex_tests.cpp
test/data/: ellipse.mha  gradient.mha  sphere.mha
test/data/projection_sample/: INS_SST.out  artery.mien  artery.minf  artery.mrng  artery.mxyz
test/data/sample_mixd/: values.mien  values.minf  values.mrng  values.mxyz
tools/: analysis.ipynb  artery_itk.ipynb  gradient_itk.ipynb  heart_itk.ipynb  itk_image.ipynb  normal_velocity.ipynb  sphere_itk.ipynb  valve_itk.ipynb
tools/data/: Pat01_lvc.mhd  Pat02_lvc.mhd  Pat03_lvc.mhd  Pat04_lvcm.mhd  Pat05_lvcm.mhd
tools/data/HeartDatabase/: readme.txt
tools/data/HeartDatabase/Pat01/: info.txt
tools/data/HeartDatabase/Pat01/expert1/: diastole_endocarde_scaled.pgm  diastole_epicarde_scaled.pgm  systole_endocarde_scaled.pgm  systole_epicarde_scaled.pgm
tools/data/HeartDatabase/Pat01/expert2/: diastole_endocarde_scaled.pgm  diastole_epicarde_scaled.pgm  systole_endocarde_scaled.pgm  systole_epicarde_scaled.pgm
tools/data/HeartDatabase/Pat01/img/: out001.pgm  out002.pgm  out003.pgm  out004.pgm  out005.pgm  out006.pgm  out007.pgm  out008.pgm  out009.pgm  out010.pgm  out011.pgm  out012.pgm  out013.pgm  out014.pgm  out015.pgm  out016.pgm  out017.pgm  out018.pgm  out019.pgm  out020.pgm  out021.pgm  out022.pgm  out023.pgm  out024.pgm  out025.pgm  pgmInfo
tools/data/HeartDatabase/Pat02/expert1/: diastole_endocarde_scaled.pgm  diastole_epicarde_scaled.pgm  systole_endocarde_scaled.pgm  systole_epicarde_scaled.pgm
tools/data/HeartDatabase/Pat02/expert2/: diastole_endocarde_scaled.pgm  diastole_epicarde_scaled.pgm  systole_endocarde_scaled.pgm  systole_epicarde_scaled.pgm
tools/data/HeartDatabase/Pat02/img/: out001.pgm  out002.pgm  out003.pgm  out004.pgm  out005.pgm  out006.pgm  out007.pgm  out008.pgm  out009.pgm  out010.pgm  out011.pgm  out012.pgm  out013.pgm  out014.pgm  out015.pgm  out016.pgm  out017.pgm  out018.pgm  out019.pgm  out020.pgm  out021.pgm  out022.pgm  out023.pgm  out024.pgm  out025.pgm
tools/data/HeartDatabase/Pat03/: info.txt
tools/data/HeartDatabase/Pat03/expert1/: diastole_endocarde_scaled.pgm  diastole_epicarde_scaled.pgm  systole_endocarde_scaled.pgm  systole_epicarde_scaled.pgm
tools/data/HeartDatabase/Pat03/expert2/: diastole_endocarde_scaled.pgm  diastole_epicarde_scaled.pgm  systole_endocarde_scaled.pgm  systole_epicarde_scaled.pgm
tools/data/HeartDatabase/Pat03/img/: out001.pgm  out002.pgm  out003.pgm  out004.pgm  out005.pgm  out006.pgm  out007.pgm  out008.pgm  out009.pgm  out010.pgm  out011.pgm  out012.pgm  out013.pgm  out014.pgm  out015.pgm  out016.pgm  out017.pgm  out018.pgm  out019.pgm  out020.pgm  out021.pgm  out022.pgm  out023.pgm  out024.pgm  out025.pgm  pgmInfo
tools/data/HeartDatabase/Pat04/expert1/: diastole_endocarde_scaled.pgm  diastole_epicarde_scaled.pgm  systole_endocarde_scaled.pgm  systole_epicarde_scaled.pgm
tools/data/HeartDatabase/Pat04/expert2/: diastole_endocarde_scaled.pgm  diastole_epicarde_scaled.pgm  systole_endocarde_scaled.pgm  systole_epicarde_scaled.pgm
tools/data/HeartDatabase/Pat04/img/: out001.pgm  (+24 more)
tools/data/HeartDatabase/Pat05/: info.txt
tools/data/HeartDatabase/Pat06/: info.txt
tools/data/HeartDatabase/Pat09/: info.txt
tools/data/HeartDatabase/Pat10/: info.txt
tools/data/HeartDatabase/Pat12/: info.txt
tools/data/HeartDatabase/Pat13/: info.txt
tools/data/HeartDatabase/Pat14/: info.txt
tools/data/HeartDatabase/Pat15/: info.txt
tools/data/HeartDatabase/Pat16/: info.txt
tools/data/HeartDatabase/Pat17/: info.txt
tools/data/HeartDatabase/Pat18/: info.txt
(+1302 files in other folders)
